traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:4: error: value update is not a member of Int
    if ((getX()=6) || (getY()=0)){
         ^TraversalDiagonal:4: error: value update is not a member of Int
    if ((getX()=6) || (getY()=0)){
                       ^